--- a/templates/default/commands.cfg.erb
+++ b/templates/default/commands.cfg.erb
@@ -173,6 +173,11 @@ define command {
 }
 
 define command {
+  command_name    check_http_host_port_url_content
+  command_line    $USER1$/check_http -H $ARG1$ -p $ARG2$ -u $ARG3$ -s $ARG4$
+}
+
+define command {
   command_name    check_https_host_port_url_content
   command_line    $USER1$/check_http -S -H $ARG1$ -p $ARG2$ -u $ARG3$ -s $ARG4$
 }
