use node name instead of fqdn for nagios hostname

--- a/templates/default/hosts.cfg.erb
+++ b/templates/default/hosts.cfg.erb
@@ -5,7 +5,7 @@
 define host {
   use server
   address <%= n['nagios']['client']['ipaddress'] %>
-  host_name <%= n[:fqdn] %>
+  host_name <%= n.name %>
 <% if (n.roles || []).empty? -%>
   hostgroups all
 <% else -%>
