--- a/templates/default/nrpe.cfg.erb
+++ b/templates/default/nrpe.cfg.erb
@@ -6,7 +6,9 @@ nrpe_group=nagios
 dont_blame_nrpe=0
 debug=0
 command_timeout=60
+<% unless @mon_host.empty? -%>
 allowed_hosts=<%= @mon_host.join(',') %>
+<% end -%>
 
 command[check_users]=<%= node['nagios']['plugin_dir'] %>/check_users -w 20 -c 30
 command[check_load]=<%= node['nagios']['plugin_dir'] %>/check_load -w <%= node['nagios']['checks']['load']['warning'] %> -c <%= node['nagios']['checks']['load']['critical'] %>
@@ -15,7 +17,6 @@ command[check_zombie_procs]=<%= node['nagios']['plugin_dir'] %>/check_procs -w 5
 command[check_total_procs]=<%= node['nagios']['plugin_dir'] %>/check_procs -w 500 -c 800
 command[check_swap]=<%= node['nagios']['plugin_dir'] %>/check_swap -w '15%' -c '5%'
 #command[check_mem]=<%= node['nagios']['plugin_dir'] %>/check_mem.sh -w <%= node['nagios']['checks']['memory']['warning'] %> -c <%= node['nagios']['checks']['memory']['critical'] %> -p
-#command[check_chef_client]=<%= node['nagios']['plugin_dir'] %>/check_procs -w 1:2 -c 1:2 -C chef-client
 command[check_smtp]=<%= node['nagios']['plugin_dir'] %>/check_smtp -H <%= node['nagios']['checks']['smtp_host'] %>
 command[check_nginx]=<%= node['nagios']['plugin_dir'] %>/check_procs -w 2:3 -c 1:5 -C nginx
 command[check_sphinx]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 1:1 -C searchd
@@ -79,15 +80,6 @@ command[check_gmetad]=<%= node['nagios']['plugin_dir']%>/check_dummy 0 "gmetad n
 # Gearmand
 command[check_gearmand]=<%= node['nagios']['plugin_dir'] %>/check_tcp -H localhost -p <%= node['gearman']['server']['port'] || 4730 %>
 <% end -%>
-
-<% if node.recipes.include?("chef-server::rubygems-install") || node.recipes.include?("couchdb") %>
-# Couch DB
-command[check_couchdb]=<%= node['nagios']['plugin_dir'] %>/check_http -H localhost -p 5984 -s '"couchdb":"Welcome"'
-# Solr
-command[check_solr]=<%= node['nagios']['plugin_dir'] %>/check_http -H localhost -p 8983 -u /solr/ -s "Solr Admin"
-# RabbitMQ
-command[check_rabbitmq]=<%= node['nagios']['plugin_dir'] %>/check_tcp -H localhost -p 5672
-<% end %>
 
 <% if node.recipe?('newrelic') %>
 command[check_newrelic]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 1: -C nrsysmond
